--- a/src/app/component/header/header.component.css
+++ b/src/app/component/header/header.component.css
@@ -9,6 +9,7 @@
 }
 li {
   list-style: none;
+  margin-top: 48px;
 }
 
 .header-title {
@@ -18,4 +19,5 @@ li {
 }
 mat-icon {
   color: white;
+  font-size: 36px;
 }
